--- a/front-end/package.json
+++ b/front-end/package.json
@@ -10,10 +10,13 @@
     "axios": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^16.1.3",
+    "firebase": "^9.22.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
+    "sass": "^1.62.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
